@@ -10,42 +10,14 @@
 <ulink url="&downloadable-file;netwinder/tftpboot.img">.../current/netwinder/tftpboot.img</ulink>
   '>
 
+<!-- m68k updated 2004-11-04 -->
+
   <!ENTITY bvme6000-tftp-files '
-<ulink url="&downloadable-file;bvme6000/linuxbvme6000.bin">.../current/bvme6000/linuxbvme6000.bin</ulink>,
-<ulink url="&downloadable-file;bvme6000/rootbvme6000.bin">.../current/bvme6000/rootbvme6000.bin</ulink>,
-<ulink url="&downloadable-file;bvme6000/tftplilo.bvme">.../current/bvme6000/tftplilo.bvme</ulink>, and
-<ulink url="&downloadable-file;bvme6000/tftplilo.conf">.../current/bvme6000/tftplilo.conf</ulink>
+<ulink url="&downloadable-file;images/kernels/vmlinuz-2.4.27-bvme6000">.../images/kernel/vmlinuz-2.4.27-bvme6000</ulink>,
+<ulink url="&downloadable-file;images/netboot/initrd.gz">.../images/netboot/initrd.gz</ulink>,
+<ulink url="&downloadable-file;images/netboot/tftplilo.bvme">.../images/netboot/tftplilo.bvme</ulink>, and
+<ulink url="&downloadable-file;images/netboot/tftplilo.conf">.../images/netboot/tftplilo.conf</ulink>
 '>
-
-  <!ENTITY list-bvme6000-tftp-files '
-<listitem><para>
-<ulink url="&downloadable-file;bvme6000/linuxbvme6000.bin">.../current/bvme6000/linuxbvme6000.bin</ulink>, 
-</para></listitem>
-<listitem><para>
-<ulink url="&downloadable-file;bvme6000/rootbvme6000.bin">.../current/bvme6000/rootbvme6000.bin</ulink>,
-</para></listitem>
-<listitem><para>
-<ulink url="&downloadable-file;bvme6000/tftplilo.bvme">.../current/bvme6000/tftplilo.bvme</ulink>, and
-</para></listitem>
-<listitem><para>
-<ulink url="&downloadable-file;bvme6000/tftplilo.conf">.../current/bvme6000/tftplilo.conf</ulink>
-</para></listitem>
-  '>
-
-  <!ENTITY list-mvme16x-tftp-files '
-<listitem><para>
-<ulink url="&downloadable-file;mvme16x/linuxmvme16x.bin">.../current/mvme16x/linuxmvme16x.bin</ulink>,
-</para></listitem>    
-<listitem><para>
-<ulink url="&downloadable-file;mvme16x/rootmvme16x.bin">.../current/mvme16x/rootmvme16x.bin</ulink>,
-</para></listitem>    
-<listitem><para>
-<ulink url="&downloadable-file;mvme16x/tftplilo.mvme">.../current/mvme16x/tftplilo.mvme</ulink>, and
-</para></listitem>
-<listitem><para>
-<ulink url="&downloadable-file;mvme16x/tftplilo.conf">.../current/mvme16x/tftplilo.conf</ulink>
-</para></listitem>
-  '>
 
 <!--  -->
 <!--  tftp disk images: proper -->
