@@ -13,6 +13,8 @@ debian-installer (20041102) UNRELEASED; urgency=low
   * Stephen R. Marenka
     - Explicitly note in manual that m68k 2.2 kernels should use initrd22
       ramdisks.
+    - Fix m68k/bvme6000 links in manual.
+    - Add mac53c9x kernel parameter notes to manual.
 
  -- Bdale Garbee <bdale@gag.com>  Tue,  2 Nov 2004 15:09:18 -0700
 
